# antar

./: .gitignore  00.py  404.html  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: backend-osrm-sdk.yml  backend-route-optimizer.yml  backend.yml  ci.yml  docs.yml  frontend.yml
ai-knowledge/creating-contexts/: index.html
ai-knowledge/initiative-context/: index.html
ai-knowledge/project-areas-context/: index.html
ai-knowledge/user-context/: index.html
backend/osrm-sdk/: client.go  client_test.go  go.mod  route.go  route_test.go
backend/route-optimizer/: Justfile  config.yaml  go.mod  go.sum
diagrams/: index.html
docs/: clip  index.md
docs/ai-knowledge/: initiative-context.md  project-areas-context.md
docs/diagrams/: README.md
docs/notebook/: index.md  refined-index.md
docs/overrides/: main.html
docs/product/: README.md  features.md  index.md  overview.md  stories.md
docs/project-roadmap/: index.md
docs/roadmap/: phase-1-foundation.md
docs/story-idea/: index.md
docs/stylesheets/: extra.css
docs/task-management/: index.md
experiment/: __init__.py  route_optimizer.py
frontend/: bunfig.toml  components.json  jest.config.ts  package-lock.json  package.json  test-setup.ts  vitest.config.ts
project-roadmap/: index.html
scripts/: dropoff-location-generator.py
search/: search_index.json
story-idea/: index.html
stylesheets/: extra.css
task-management/: index.html
technical-roadmap/: index.html
technical-specifications/: index.html
user-personas/: index.html
workflows/: commit based on git diff  do iterative experiment on  feedback on instruction  give feedback to workflow instruction  instruct create semantic git commits from diff  instruct create semantic git commits from diff.md  instruct create semantic git commits from diff.natural.md  instruct create semantic git commits from diff.v2.md  instruct create semantic git commits from diff.v3.md  instruct reflective documentation refinement.md
(+232 files in other folders)
