[tool.poetry]
name = "antar"
version = "0.1.0"
description = "Scripts for TechOps in Antar"
authors = ["Faris Sufyan <farissufyan99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.1.7"
rich = ">=13.7.0"
typer = ">=0.9.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.2"
mkdocs-mermaid2-plugin = "1.1.1"
mkdocs-include-markdown-plugin = "6.0.4"
playwright = "1.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
