[tool.poetry]
name = "antar"
version = "0.1.0"
description = "Scripts for TechOps in Antar"
authors = ["Faris Sufyan <farissufyan99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.1.7"
rich = ">=13.7.0"
typer = ">=0.9.0"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
folium = "^0.19.3"
pillow = "^11.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.2"
mkdocs-mermaid2-plugin = "1.1.1"
mkdocs-include-markdown-plugin = "6.0.4"
playwright = "1.49.1"
pyyaml = "^6.0.1"

[tool.poetry.group.osrm]
optional = true

[tool.poetry.group.osrm.dependencies]
polyline = "^2.0.1" # for scripts/osrm/test-render.py

[tool.poetry.group.map]
optional = true

[tool.poetry.group.map.dependencies]
contextily = "1.6.2"
geopandas = "^0.12.2"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
fiona = "1.9.6"
polyline = "^2.0.2"

[tool.poetry.group.experiment]
optional = true

[tool.poetry.group.experiment.dependencies]
notebook = "^7.3.2"
ipykernel = "^6.29.5"
folium = "^0.19.2"
scikit-learn = "^1.6.0"
pillow = "^11.0.0"
selenium = "^4.27.1"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
